<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorDark"
    tools:context=".fragment.HomePageFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaylistsRecom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMidBar">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHomePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColorDark"
        android:fontFamily="@font/mulish_extrabold"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/rvPlaylists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Günaydın"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/setting"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarHomePage"
        app:layout_constraintEnd_toEndOf="@+id/toolbarHomePage"
        app:layout_constraintTop_toTopOf="@+id/toolbarHomePage"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/history"
        android:layout_width="30dp"
        android:layout_height="34dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/history"
        android:src="@drawable/orientation_lock"
        app:layout_constraintBottom_toBottomOf="@+id/setting"
        app:layout_constraintEnd_toStartOf="@+id/setting"
        app:layout_constraintTop_toTopOf="@+id/setting" />

    <ImageView
        android:id="@+id/notif"
        android:layout_width="28dp"
        android:layout_height="34dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/notification"
        android:src="@drawable/vector"
        app:layout_constraintBottom_toBottomOf="@+id/history"
        app:layout_constraintEnd_toStartOf="@+id/history"
        app:layout_constraintTop_toTopOf="@+id/history" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaylists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarHomePage">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textViewMidBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/mulish_extrabold"
        android:letterSpacing="-0.07"
        android:text="@string/devam_et"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvPlaylists" />

    <TextView
        android:id="@+id/textViewBottomBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/mulish_extrabold"
        android:letterSpacing="-0.07"
        android:text="@string/en_sevdigin_sanatcilar"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvPlaylistsRecom" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="@drawable/gradient_bg"
        app:elevation="0dp"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        app:itemRippleColor="@color/backgroundColorLight"
        app:itemTextColor="@color/bottom_navigation_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_bar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>